--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -5,7 +5,7 @@
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- Welcome Guest -->
-<div class="wrapper style1 first" ng-if="!isLoggedIn">
+<div class="wrapper" ng-if="!isLoggedIn">
     <article class="container" id="top">
         <div class="row">
             <div class="4u">
@@ -24,7 +24,7 @@
 </div>
 
 <!-- User News Feed -->
-<div class="wrapper style1 first" ng-if="isLoggedIn">
+<div class="wrapper" ng-if="isLoggedIn">
     <article class="container">
         <div class="row">
             <div class="12u">
