--- a/templates/login-view.html
+++ b/templates/login-view.html
@@ -5,7 +5,7 @@
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- LogIn Guest -->
-<div class="wrapper style1" ng-if="!isLoggedIn">
+<div class="wrapper" ng-if="!isLoggedIn">
     <article id="logIn" class="container 75%">
         <header>
             <h2>Log In</h2>
