--- a/templates/partial/comment-view.html
+++ b/templates/partial/comment-view.html
@@ -4,7 +4,7 @@
         <form name="newCommentForm">
             <div class="row">
                 <div class="6u">
-                        <textarea name="newComment" id="newComment" required placeholder="Comment..."
+                        <textarea name="newComment" id="newComment" required placeholder="Message..."
                                   ng-model="commentData.commentContent"></textarea>
                 </div>
                 <div class="6u">
