--- a/templates/partial/posts-view.html
+++ b/templates/partial/posts-view.html
@@ -1,5 +1,5 @@
 <!-- User Posts -->
-<section class="box style1" ng-repeat="post in feedData">
+<section class="box" ng-repeat="post in feedData">
     <div class="row">
         <div class="4u">
             <a href="#/{{post.author.username}}">
