--- a/templates/signup-view.html
+++ b/templates/signup-view.html
@@ -5,7 +5,7 @@
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- Sign Up Guest -->
-<div class="wrapper style1">
+<div class="wrapper">
     <article id="signUp" class="container 75%">
         <header>
             <h2>Sign Up</h2>
