--- a/templates/user/user-view.html
+++ b/templates/user/user-view.html
@@ -5,7 +5,7 @@
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- User Wall -->
-<div class="wrapper style1 first" ng-if="isLoggedIn">
+<div class="wrapper" ng-if="isLoggedIn">
     <article class="container" id="top">
         <section class="box style1" ng-style="{'background-image':'url(' + userData.coverImageData + ')'}">
             <div class="row" >
