--- a/templates/partial/friends-preview-view.html
+++ b/templates/partial/friends-preview-view.html
@@ -1,5 +1,5 @@
 <!-- Friends Preview -->
-<section class="box style1" ng-init="loadFriendsPreview()">
+<section class="box" ng-init="loadFriendsPreview()">
     <div class="row">
         <div class="12u">
             Friends -
