--- a/templates/user/edit-profile-view.html
+++ b/templates/user/edit-profile-view.html
@@ -5,7 +5,7 @@
 <div ng-include="'templates/partial/header-view.html'"></div>
 
 <!-- User Edit Profile -->
-<div class="wrapper style1 first" ng-if="isLoggedIn">
+<div class="wrapper" ng-if="isLoggedIn">
     <article class="container">
         <div class="12u">
             <header>
