--- a/Practice/Exams/Office-Notes/templates/edit-note.html
+++ b/Practice/Exams/Office-Notes/templates/edit-note.html
@@ -1,11 +1,13 @@
 <div class="dialog-box" id="edit-note" data-id="note_id">
+    {{#results}}
     <h1>Edit note</h1>
     <label for="title">Title:</label>
-    <input type="text" id="title" value="Note Title"/>
+    <input type="text" id="title" value="{{title}}"/>
     <label for="text">Text:</label>
-    <input type="text" id="text" value="Note Text"/>
+    <input type="text" id="text" value="{{text}}"/>
     <label for="deadline">Deadline:</label>
-    <input type="date" id="deadline" value="1999-01-02"/>
+    <input type="date" id="deadline" value="{{deadline}}"/>
     <a href="#"><button id="editNoteButton">Edit note</button></a>
     <a href="#/myNotes/"><button>Cancel</button></a>
+    {{/results}}
 </div>
