--- a/iCart/public/css/style.css
+++ b/iCart/public/css/style.css
@@ -5,12 +5,12 @@ body {
     height: 100%;
     /* The html and body elements cannot have any padding or margin. */
     -webkit-font-smoothing: antialiased;
-    font: normal 14px arial,sans-serif;
+    font: normal 14px arial, sans-serif;
 }
 
 .row {
-    margin-left:0px;
-    margin-right:0px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /* Wrapper for page content to push down footer */
@@ -28,11 +28,10 @@ body {
 #footer {
     height: 60px;
     background-color: #f5f5f5;
-    margin-top:50px;
-    padding-top:20px;
-    padding-bottom:20px;
+    margin-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -40,64 +39,65 @@ body {
 #wrap > .container {
     padding: 60px 15px 0;
 }
+
 .container .credit {
     margin: 20px 0;
 }
 
 #footer {
-    background-color:#414141;
+    background-color: #414141;
 }
 
 #footer a {
-    color:#efefef;
+    color: #efefef;
 }
 
-h1,h2,h3,h4 {
+h1, h2, h3, h4 {
     font-family: 'Kreon', serif;
-    vertical-align:middle;
+    vertical-align: middle;
 }
 
 header {
     background: #f16251;
-    height:125px;
-    color:#000000;
+    height: 125px;
+    color: #000000;
 }
 
-header h1,header h2,header h3 a,header a,header a:hover {
-    color:#101010;
-    font-weight:800;
-    text-decoration:none;
+header h1, header h2, header h3 a, header a, header a:hover {
+    color: #101010;
+    font-weight: 800;
+    text-decoration: none;
 }
 
 header h3 {
     font-family: 'Kreon', serif;
     background: #ffcc33;
-    padding:10px;
-    border-radius:3px;
-    font-size:34px;
-    padding:12px 10px 6px 10px;
+    padding: 10px;
+    border-radius: 3px;
+    font-size: 34px;
+    padding: 12px 10px 6px 10px;
 }
 
 header .dropdown-menu {
-    top:74px;
+    top: 74px;
     background: #ffcc33;
-    border-width:0;
+    border-width: 0;
 }
 
 h1 {
-    font-size:50px;
+    font-size: 50px;
 }
 
 #nav {
     width: 100%;
-    position:static;
-    top:-32px;
+    position: static;
+    top: -32px;
 }
 
 #nav.affix {
     position: fixed;
     top: 0;
-    z-index:10;
+    z-index: 10;
     -webkit-transition: all .6s ease-in-out;
 }
 
@@ -108,10 +108,11 @@ h1 {
 }
 
 @media (min-width: 767px) {
-    .navbar-nav.nav-justified > li{
-        float:none;
+    .navbar-nav.nav-justified > li {
+        float: none;
     }
 }
+
 .navbar-nav {
     margin: 1px 1px;
 }
@@ -119,38 +120,43 @@ h1 {
 /* customize nav style */
 .navbar-custom {
     background-color: #2e2e2e;
-    font-weight:700;
-    text-transform:uppercase;
-    border-width:0;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-width: 0;
 }
-.navbar-custom  .navbar-nav>li>a {
+
+.navbar-custom .navbar-nav > li > a {
     color: #ddd;
 }
-.navbar-custom  .navbar-nav li>a:hover, .navbar-nav li .open, .navbar-custom .navbar-nav .active a  {
+
+.navbar-custom .navbar-nav li > a:hover, .navbar-nav li .open, .navbar-custom .navbar-nav .active a {
     background-color: #000;
 }
-.navbar-custom .dropdown-menu{
-    right:0;
+
+.navbar-custom .dropdown-menu {
+    right: 0;
 }
-.navbar-custom .navbar-nav>.dropdown>a .caret {
+
+.navbar-custom .navbar-nav > .dropdown > a .caret {
     border-top-color: #999;
     border-bottom-color: #999;
 }
 
-.navbar-collapse.in { /*3.0.2 bug workaround*/
+.navbar-collapse.in {
+    /*3.0.2 bug workaround*/
     overflow-y: visible;
 }
 
 .navbar-toggle {
-    outline:0;
+    outline: 0;
 }
 
 .divider {
-    height:100px;
+    height: 100px;
 }
 
 .panel {
-    border-width:0;
+    border-width: 0;
 }
 
 @media (max-width: 768px) {
@@ -167,26 +173,26 @@ h1 {
 }
 
 .scroll-top {
-    position:fixed;
-    bottom:0;
-    right:6%;
-    z-index:100;
+    position: fixed;
+    bottom: 0;
+    right: 6%;
+    z-index: 100;
     background: #ffcc33;
-    font-size:24px;
-    border-top-left-radius:3px;
-    border-top-right-radius:3px;
-}
-.scroll-top a:link,.scroll-top a:visited {
-    color:#222;
+    font-size: 24px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
+.scroll-top a:link, .scroll-top a:visited {
+    color: #222;
+}
 
 section {
     color: #ffffff;
     min-height: 400px;
     height: auto !important;
     height: 100%;
-    padding-top:100px;
+    padding-top: 100px;
 }
 
 .bg-1 {
@@ -214,6 +220,6 @@ section {
 }
 
 .bg-4 {
-    padding-top:30px;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(20,20,20,0.2)),to(rgba(255,255,255,0)), color-stop(1,#000));
+    padding-top: 30px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(20, 20, 20, 0.2)), to(rgba(255, 255, 255, 0)), color-stop(1, #000));
 }
