Implement login and register functionality

--- a/iCart/public/css/style.css
+++ b/iCart/public/css/style.css
@@ -157,6 +157,12 @@ h1 {
     border-width: 0;
 }
 
+.error {
+    font-size: 24px;
+    text-align: center;
+    color: red;
+}
+
 @media (max-width: 768px) {
     header {
         height: 95px;
