--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/Profile.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.IndexViewModel
+﻿@model Twitter.App.Models.ProfileViewModel
 @{
     ViewBag.Title = "Profile";
 }
@@ -10,6 +10,13 @@
     <h4>Change your account settings</h4>
     <hr/>
     <dl class="dl-horizontal">
+        <dt>Edit profile:</dt>
+        <dd>
+            [
+            @Html.ActionLink("Edit profile", "EditProfile")
+            ]
+        </dd>
+
         <dt>Password:</dt>
         <dd>
             [
