Create View and Binding models

--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.ExternalLoginConfirmationViewModel
+﻿@model Twitter.App.Models.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
