--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/ForgotPassword.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.ForgotPasswordViewModel
+﻿@model Twitter.App.Models.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
