--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/Login.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Twitter.App.Models
-@model Twitter.App.Models.LoginViewModel
+@using Twitter.App.Models.ViewModels
+@model Twitter.App.Models.ViewModels.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
