--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/Register.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.RegisterViewModel
+﻿@model Twitter.App.Models.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
