--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/ResetPassword.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.ResetPasswordViewModel
+﻿@model Twitter.App.Models.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
