--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/SendCode.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.SendCodeViewModel
+﻿@model Twitter.App.Models.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
