--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/VerifyCode.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.VerifyCodeViewModel
+﻿@model Twitter.App.Models.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
