--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/ChangePassword.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.ChangePasswordViewModel
+﻿@model Twitter.App.Models.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
