--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/Profile.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.ProfileViewModel
+﻿@model Twitter.App.Models.ViewModels.ProfileViewModel
 @{
     ViewBag.Title = "Profile";
 }
@@ -6,6 +6,7 @@
 <h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
+
 <div>
     <h4>Change your account settings</h4>
     <hr/>
