--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/SetPassword.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.App.Models.SetPasswordViewModel
+﻿@model Twitter.App.Models.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
