--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.Owin.Security
-@model Twitter.App.Models.ExternalLoginListViewModel
+@model Twitter.App.Models.ViewModels.ExternalLoginListViewModel
 
 <h4>Use another service to log in.</h4>
 <hr/>
