--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Content/Site.css
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.cover-image {
+    width: 100%;
+    height: 200px;
+}
+
+.profile-image {
+    width: 100px;
+    height: 100px;
+}
