--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Shared/_LoginPartial.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Users", new { user = User.Identity.GetUserName() }, new { title = "User.Identity.GetUserName()" })
+                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Users", new { username = User.Identity.GetUserName() }, new { title = "User.Identity.GetUserName()" })
             </li>
             <li>
                 @Html.ActionLink("Profile", "Profile", "Users", null, new { title = "Profile" })
