Implement user home page

--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Home/Index.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Home/Index.cshtml
@@ -1,8 +1,30 @@
-﻿@{
+﻿@model PagedList.IPagedList<Twitter.App.Models.ViewModels.TweetViewModel>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>Welcome to Twitter</h1>
-    <p class="lead">This is a free social network website. You can follow friends and tweet a tweet.</p>
+    <h1>Twitter</h1>
 </div>
+
+@if (@Model != null)
+{
+    foreach (var tweet in Model)
+    {
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <img src=@tweet.Author.ProfileImage alt="Profile Image" class="media-object profile-image-sm" />
+                <span>@tweet.Author.Username</span>
+                <time>@tweet.TweetedOn</time>
+            </div>
+            <div class="panel-body">@tweet.Content</div>
+            <div class="panel-footer">Panel footer</div>
+        </div>
+    }
+
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+}
