--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Content/Site.css
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Content/Site.css
@@ -29,6 +29,7 @@ textarea {
 }
 
 .profile-image {
-    width: 100px;
-    height: 100px;
+    margin: -200px 0 0 20px;
+    width: 150px;
+    height: 150px;
 }
