--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/Index.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/Index.cshtml
@@ -1,13 +1,16 @@
-﻿@model Twitter.App.Models.ViewModels.UserPageViewModel
+﻿@model Twitter.App.Models.ViewModels.UserViewModel
 @{
     ViewBag.Title = @Model.Username;
 }
 
 <div class="row">
     <div class="col-lg-12">
-        <img class="cover-image" src="@Model.CoverImage" />
-        <img class="profile-image" src="@Model.ProfileImage" />
+        <img class="cover-image" src="@Model.CoverImage"/>
+        <img class="profile-image img-circle" src="@Model.ProfileImage"/>
     </div>
+</div>
+<div class="row">
+    
 </div>
 
 
