--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Content/Site.css
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Content/Site.css
@@ -33,6 +33,18 @@ textarea {
     width: 150px;
     height: 150px;
 }
+
+.tweet-profile-image {
+    width: 50px;
+    height: 50px;
+}
+
 .username {
     margin: -49px 0 0 200px;    
+}
+
+.new-post-text-area {
+    width: 100%;
+    max-width: 100%;
+    resize: none;
 }
