--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Home/Index.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model PagedList.IPagedList<Twitter.App.Models.ViewModels.TweetViewModel>
-@using PagedList.Mvc;
-<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
-<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<Twitter.App.Models.ViewModels.TweetViewModel>
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css"/>
 
 @{
     ViewBag.Title = "Home Page";
@@ -11,20 +11,34 @@
     <h1>Twitter</h1>
 </div>
 
+@if (HttpContext.Current.User != null && HttpContext.Current.User.Identity.IsAuthenticated)
+{
+    Html.RenderAction("PostTweet", "Tweets");
+}
+
 @if (@Model != null)
 {
     foreach (var tweet in Model)
     {
         <div class="panel panel-default">
             <div class="panel-heading">
-                <img src=@tweet.Author.ProfileImage alt="Profile Image" class="media-object profile-image-sm" />
+                <img src=@tweet.Author.ProfileImage alt="Profile Image" class="media-object profile-image-sm tweet-profile-image"/>
                 <span>@tweet.Author.Username</span>
                 <time>@tweet.TweetedOn</time>
             </div>
             <div class="panel-body">@tweet.Content</div>
-            <div class="panel-footer">Panel footer</div>
+            <div class="panel-footer" style="text-align: right">
+                <a href="" class="btn btn-default btn-primary">Favor</a>
+                <a href="" class="btn btn-default btn-primary">Retweet</a>
+                <a href="" class="btn btn-default btn-primary">Report</a>
+                <a href="" class="btn btn-default btn-primary">Reply</a>
+                <a href="" class="btn btn-default btn-primary">Share</a>
+            </div>
         </div>
     }
 
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+    if (Model.HasNextPage)
+    {
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+    }
 }
