--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Shared/_UserHomePageHeader.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Shared/_UserHomePageHeader.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewBag.Title = "_UserHomePageHeader";
-}
+﻿@model Twitter.App.Models.ViewModels.UserViewModel
 
 <div class="row">
     <div class="col-lg-12">
