Implement user follow

--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Home/Index.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         </div>
     }
 
-    if (Model.HasNextPage)
+    if (Model.HasNextPage || Model.HasPreviousPage)
     {
         @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
     }
