--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Shared/_UserHomePageHeader.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Shared/_UserHomePageHeader.cshtml
@@ -1,4 +1,5 @@
-﻿@model Twitter.App.Models.ViewModels.UserViewModel
+﻿@using Microsoft.AspNet.Identity
+@model Twitter.App.Models.ViewModels.UserViewModel
 
 <div class="row">
     <div class="col-lg-12">
@@ -6,10 +7,13 @@
         <img class="profile-image img-circle" src="@Model.ProfileImage"/>
         <div>
             <p class="username lead">@Model.Username</p>
-            <form action="/@Model.Username/Users/Follow" method="POST">
-                <input name="followUserId" type="hidden" value="@Model.Id" />
-                <input class="btn btn-default" type="submit" value="Follow"/>
-            </form>
+            @if (Model.Id != this.User.Identity.GetUserId() && !Model.IsFollowing && HttpContext.Current.User != null && HttpContext.Current.User.Identity.IsAuthenticated)
+            {
+                <form action="/@Model.Username/Users/Follow" method="POST">
+                    <input name="followUserId" type="hidden" value="@Model.Id" />
+                    <input class="btn btn-default" type="submit" value="Follow" />
+                </form>
+            }          
         </div>
     </div>
 </div>
