--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Tweets/Index.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Tweets/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div class="panel-body">@tweet.Content</div>
         <div class="panel-footer" style="text-align: right">
-            <a href="" class="btn btn-default btn-primary">Favor</a>
+            @Html.ActionLink("Favourite", "FavorTweet", "Tweets", new { tweetId = tweet.Id }, new {@class = "btn btn-default btn-primary" })
             <a href="" class="btn btn-default btn-primary">Retweet</a>
             <a href="" class="btn btn-default btn-primary">Report</a>
             <a href="" class="btn btn-default btn-primary">Reply</a>
