--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/EditProfile.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/EditProfile.cshtml
@@ -26,6 +26,12 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.ProfileImage, new { @class = "col-md-2 control-label" })
+        <div class="col-md-offset-2 col-md-10">
+            <input type="file" name="ProfileImage"/>
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Edit Profile" class="btn btn-default" />
         </div>
