--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/EditProfile.cshtml
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Views/Users/EditProfile.cshtml
@@ -7,7 +7,7 @@
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 
-@using (Html.BeginForm("EditProfile", "Users", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("EditProfile", "Users", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Edit Profile Form</h4>
@@ -28,7 +28,13 @@
     <div class="form-group">
         @Html.LabelFor(m => m.ProfileImage, new { @class = "col-md-2 control-label" })
         <div class="col-md-offset-2 col-md-10">
-            <input type="file" name="ProfileImage"/>
+            <input type="file" name="images[0]"/>
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.CoverImage, new { @class = "col-md-2 control-label" })
+        <div class="col-md-offset-2 col-md-10">
+            <input type="file" name="images[1]" />
         </div>
     </div>
     <div class="form-group">
