--- a/Homework/07-AJAX-in-ASP.NET-MVC/AJAX/AJAX.App/Views/Account/Register.cshtml
+++ b/Homework/07-AJAX-in-ASP.NET-MVC/AJAX/AJAX.App/Views/Account/Register.cshtml
@@ -9,13 +9,12 @@
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
-    <hr />
+    <hr/>
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label", id = "exist" })
         <div class="col-md-10">
-            <input type="text" data-autocomplete-url="@Url.Action("Search")" class="form-control" />
-            @*@Html.TextBoxFor(m => m.Username, new { @class = "form-control", @data - autocomplete - url = "@Url.Action("Search")" })*@
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", id = "username" })
         </div>
     </div>
     <div class="form-group">
@@ -38,7 +37,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Register"/>
         </div>
     </div>
 }
@@ -47,13 +46,22 @@
     @Scripts.Render("~/bundles/jqueryval")
 
     <script>
-        $(document).ready(function () {
-            $('*[data-autocomplete-url]')
-                .each(function () {
-                    $(this).autocomplete({
-                        source: $(this).data("autocomplete-url")
-                    });
-                });
+        $(document).ready(function() {
+            $('#username').keyup(function() {
+                var username = $("#username").val();
+                console.log(username);
+                $.getJSON(
+                    "/Account/IsUsernameTaken",
+                    { 'username': username },
+                    function(data) {
+                        if (data) {
+                            $("#exist").html("Username is taken");
+                        } else {
+                            $("#exist").html("Username");
+                        }
+                    }
+                );
+            });
         });
     </script>
 }
