Sovle homework 08 problem 22 Import SignalR in your Twitter application

--- a/Homework/08-ASP.NET-SignalR/Twitter/Twitter.App/Views/Home/Index.cshtml
+++ b/Homework/08-ASP.NET-SignalR/Twitter/Twitter.App/Views/Home/Index.cshtml
@@ -12,6 +12,11 @@
 </div>
 <div class="row">
     <div class="col-lg-8">
+        @if (HttpContext.Current.User != null && HttpContext.Current.User.Identity.IsAuthenticated)
+        {
+            Html.RenderAction("PostTweet", "Tweets");
+        }
+
         @if (@Model != null)
         {
             foreach (var tweet in Model)
