Implement some signalr functionality

--- a/Homework/08-ASP.NET-SignalR/Twitter/Twitter.App/Views/Home/Index.cshtml
+++ b/Homework/08-ASP.NET-SignalR/Twitter/Twitter.App/Views/Home/Index.cshtml
@@ -17,6 +17,8 @@
             Html.RenderAction("PostTweet", "Tweets");
         }
 
+        <div id="new-tweet" class="row"></div>
+
         @if (@Model != null)
         {
             foreach (var tweet in Model)
