--- a/Homework/08-ASP.NET-SignalR/Twitter/Twitter.App/Views/Shared/_Layout.cshtml
+++ b/Homework/08-ASP.NET-SignalR/Twitter/Twitter.App/Views/Shared/_Layout.cshtml
@@ -44,6 +44,8 @@
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/signalr/hubs")
+@Scripts.Render("~/bundles/script")
 @RenderSection("scripts", false)
 </body>
 </html>
